@@ -776,6 +776,15 @@ X86_INST(popf)
 	UOP(load,	DAUX,	0,	0,	DZPS,	DCF,	DOF,	0)
 	UOP(add,	DESP,	0,	0,	DESP,	0,	0,	0)
 
+X86_INST(prefetcht0)
+	UOP(load,	DMEM,	0,	0,	0,	0,	0,	0)
+X86_INST(prefetcht1)
+	UOP(load,	DMEM,	0,	0,	0,	0,	0,	0)
+X86_INST(prefetcht2)
+	UOP(load,	DMEM,	0,	0,	0,	0,	0,	0)
+X86_INST(prefetchnta)
+	UOP(load,	DMEM,	0,	0,	0,	0,	0,	0)
+
 X86_INST(push_rm32)
 	UOP(sub,	DESP,	0,	0,	DESP,	0,	0,	0)
 	UOP(effaddr,	DESP,	0,	0,	DAUX,	0,	0,	0)
